--- a/fashe-colorlib/index.html
+++ b/fashe-colorlib/index.html
@@ -158,7 +158,7 @@
 												<!-- Button -->
 												<a href="product-detail.php?product={$product0}">
                                                     <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													   Add to Cart
+													   Buy Now
 												    </button>
                                                 </a>
 											</div>
@@ -188,7 +188,7 @@
                                                 <!-- Button -->
                                                 <a href="product-detail.php?product={$product1}">
 												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													   Add to Cart
+													   Buy Now
 												    </button>
                                                 </a>
 											</div>
@@ -218,7 +218,7 @@
                                                 <!-- Button -->
                                                 <a href="product-detail.php?product={$product2}">
 												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													   Add to Cart
+													   Buy Now
 												    </button>
                                                 </a>
 											</div>
@@ -249,7 +249,7 @@
 												<!-- Button -->
                                                 <a href="product-detail.php?product={$product3}">
 												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													   Add to Cart
+													   Buy Now
 												    </button>
                                                 </a>
 											</div>
@@ -284,7 +284,7 @@
 												<!-- Button -->
                                                 <a href="product-detail.php?product={$saleproduct0}">
 												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													   Add to Cart
+													   Buy Now
 												    </button>
                                                 </a>
 											</div>
@@ -318,7 +318,7 @@
 												<!-- Button -->
 												<a href="product-detail.php?product={$saleproduct1}">
                                                     <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													   Add to Cart
+													   Buy Now
 												    </button>
                                                 </a>
 											</div>
@@ -352,7 +352,7 @@
 												<!-- Button -->
                                                 <a href="product-detail.php?product={$saleproduct2}">
 												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													   Add to Cart
+													   Buy Now
 												    </button>
                                                 </a>
 											</div>
@@ -386,7 +386,7 @@
 												<!-- Button -->
                                                 <a href="product-detail.php?product={$saleproduct3}">
 												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													   Add to Cart
+													   Buy Now
 												    </button>
                                                 </a>
 											</div>
