--- a/fashe-colorlib/html/product-detail.html
+++ b/fashe-colorlib/html/product-detail.html
@@ -229,7 +229,7 @@
 											<!-- Button -->
                                 	        <a href="product-detail.php?product={$product[0]}">
 											  	<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													Add to Cart
+													Buy Now
 										  	</button>
                                         	</a>
 										</div>
