--- a/fashe-colorlib/html/shop.html
+++ b/fashe-colorlib/html/shop.html
@@ -166,7 +166,7 @@
 											<!-- Button -->
             	                            <a href="product-detail.php?product={$product[0]}">
 												<button name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													Add to Cart
+													Buy Now
 												</button>
                                         	</a>
 										</div>
@@ -181,7 +181,7 @@
 											<!-- Button -->
                         	                <a href="product-detail.php?product={$product[0]}">
 												<button name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													Add to Cart
+													Buy Now
 												</button>
                                         	</a>
 										</div>
