Uodate add-product v0.5

--- a/fashe-colorlib/html/add-product.html
+++ b/fashe-colorlib/html/add-product.html
@@ -76,7 +76,7 @@
 					<br>
 
 					<p>Select product image</p>
-					<input type="file" name="userfile[]" id="imgToUpload" required>
+					<input type="file" name="userfile[]" id="imgToUpload">
 					<br>
 
 					<input type="file" name="userfile[]" id="imgToUpload">
