--- a/fashe-colorlib/footer.html
+++ b/fashe-colorlib/footer.html
@@ -70,13 +70,13 @@
                 </li>
 
                 <li class="p-b-9">
-                    <a href="shipping.php" class="s-text7">
+                    <a href="addresses.php" class="s-text7">
                         Shipping
                     </a>
                 </li>
 
                 <li class="p-b-9">
-                    <a href="orders.php" class="s-text7">
+                    <a href="order-support.php" class="s-text7">
                         Returns
                     </a>
                 </li>
@@ -96,13 +96,13 @@
                 </li>
 
                 <li class="p-b-9">
-                    <a href="shipping.php" class="s-text7">
+                    <a href="addresses.php" class="s-text7">
                         Shipping
                     </a>
                 </li>
 
                 <li class="p-b-9">
-                    <a href="orders.php" class="s-text7">
+                    <a href="order-support.php" class="s-text7">
                         Returns
                     </a>
                 </li>
